<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/rl_parent_view">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_language_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_language"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:textSize="14sp"

            />

        <RadioGroup
            android:id="@+id/rg_app_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/tv_language_heading"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:text="@string/text_english"
                android:layout_marginLeft="-4dp"
                android:layout_marginStart="-4dp"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_hindi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginStart="-4dp"
                android:text="@string/text_hindi"
                android:textColor="@color/black"
                android:textSize="11sp" />


        </RadioGroup>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_language_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cancel"
            android:layout_below="@+id/rg_app_lang"
            android:layout_marginTop="5dp"
            android:textSize="11sp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"
            android:layout_toLeftOf="@+id/tv_language_ok"
            android:layout_toStartOf="@+id/tv_language_ok"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"

            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_language_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_ok"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/rg_app_lang"
            android:layout_marginTop="5dp"
            android:textSize="11sp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"

            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_language_ok"
            />

    </RelativeLayout>



</RelativeLayout>



